Fixed broken css styling

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -28,6 +28,6 @@ span {
   padding-top: 30px;
 }
 
-.fa-solid {
+#arrows{
   color: red;
 }
