--- a/public/styles/tweet-container.css
+++ b/public/styles/tweet-container.css
@@ -1,13 +1,17 @@
+.tweet {
+  width: 750px;
+}
+
+.tweet:hover {
+  box-shadow: 5px 5px 5px green;
+}
+
 .tweet-container-header {
   display: flex;
-  width: 500px;
+  width: 100%;
   flex-direction: row;
   justify-content: space-between;
   margin-top: 30px;
-}
-
-.tweet-container:hover {
-  box-shadow: 5px 5px 5px green;
 }
 
 #header-div {
@@ -22,7 +26,7 @@
   width: 100px;
 }
 
-article {
+.tweet-content {
   border-top: null;
   border-left: null;
   border-right: null;
